[package]
name = "cli"
version = "0.0.1"
author = "D-banana"
edition = "2021"
license = "MIT"
keywords = ["ethereum", "web3", "home assistant", "uniswap", "rocket pool"]

[dependencies]
core = { path = "../core" }

clap = { version = "4.0", features = ["derive"] }
thiserror = { version = "1.0.38" }
tokio = { version = "1.24.1", features = ["full"] }
