[package]
name = "core"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["ethereum", "web3", "home assistant", "uniswap", "rocket pool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
ethers = { version = "1.0.2" }
thiserror = { version = "1.0.38" }
